Issue #73 Do not let footer cut off body

--- a/css/main.scss
+++ b/css/main.scss
@@ -133,7 +133,6 @@ h3 {
 
 .site-footer {
     background: #e8e8e8;
-    position: absolute;
     color: #111;
     box-sizing: border-box;
     right: 0;
